--- a/SpendSmart/requirements.txt
+++ b/SpendSmart/requirements.txt
@@ -1,4 +1,13 @@
 asgiref==3.8.1
 Django==5.0.4
 mysqlclient==2.2.4
+numpy==1.26.4
+packaging==24.0
+pandas==2.2.2
+plotly==5.21.0
+python-dateutil==2.9.0.post0
+pytz==2024.1
+six==1.16.0
 sqlparse==0.5.0
+tenacity==8.2.3
+tzdata==2024.1
